--- a/homework/задание 2 (1).html
+++ b/homework/задание 2 (1).html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8"/>
-  <title>заголовок вкладки</title>
-  </head>
-    <body>
+    <meta charset="utf-8"/>
+    <title>заголовок вкладки</title>
+</head>
+<body>
 <main class="content">
-  <aside class="left">
-    <p>Левый сайдбар</p>
-  </aside>
-  <main class="content">
-    <aside class="right">
-      <p>Правый сайдбар</p>
+    <aside class="left">
+        <p>Левый сайдбар</p>
     </aside>
-  </body>
+
+    <aside class="right">
+        <p>Правый сайдбар</p>
+    </aside>
+</main>
+</body>
 
 
 <style>
-  .right {
-    width: 20%;
-    height: 100%;
-    background-color: #4A5073;
-  }
+    .right {
+        width: 20%;
+        height: 100%;
+        background-color: #4A5073;
+    }
 
-  .left {
-    width: 20%;
-    height: 100%;
-    background-color: #4A5073;
-  }
+    .left {
+        width: 20%;
+        height: 100%;
+        background-color: #4A5073;
+    }
 
-  .content {
-    width: calc(100% - 100px);
-    margin: 50px;
-    height: calc(100vh - 100px);
-    background-color: #DBE2EE;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: center;
-  }
+    .content {
+        width: calc(100% - 100px);
+        margin: 50px;
+        height: calc(100vh - 100px);
+        background-color: #DBE2EE;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-content: center;
+    }
 
-  p {
-    text-align: center;
-    color: #fff;
-  }
+    p {
+        text-align: center;
+        color: #fff;
+    }
 </style>
-<html/>>
+<html/>
+>
